--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "backendProject",
   "version": "1.0.0",
   "description": "A backend Project",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "node --watch src/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.2.5"
+  }
 }
