--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "prettier": "^3.2.5"
+  },
+  "dependencies": {
+    "dot-env": "^0.0.1",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.4"
   }
 }
