--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backendProject",
   "version": "1.0.0",
   "description": "A backend Project",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "dev": "node --watch src/index.js"
@@ -13,7 +13,10 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dot-env": "^0.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.4"
   }
